# scrobblebox

./: .env.example  .gitignore  README.md  prompt.md  pyproject.toml  requirements.txt
deploy/systemd/: scrobblebox-core.service  scrobblebox-lyrics.service  scrobblebox-oscilloscope.service
docs/: architecture.md  raspberry-pi-setup.md
src/scrobblebox/: __init__.py  config.py
src/scrobblebox/core/: __init__.py  audio.py  discogs.py  lastfm.py  models.py  recognizer.py  runtime.py  service.py
src/scrobblebox/lyrics/: __init__.py  display.py  service.py  state.py
src/scrobblebox/oscilloscope/: __init__.py  service.py
tests/: __init__.py  test_discogs.py  test_runtime.py
